--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div id="map"></div>
-    <div id="status-message">App loaded. Initializing map...</div> <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    <div id="status-message">App loaded. Initializing map...</div>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nEFhSABxU7d2/X29u/pB3J/r0z+8E4o4c3aM/c="
      crossorigin=""></script>
 
